tests/errors/interface_missing.vrv
interface foo<t> {
  virtual f () -> void
}

implementation foo<int> {
}
